# bank-churn-predictor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: api.py  app.py
models/: churn_model.pkl  scaler.pkl
notebooks/: 01_eda.ipynb  02_modeling.ipynb
src/: data_preprocessing.py  evaluate.py  features.py  train.py
tests/: test_pipeline.py
